# Doer-s-

./: pyproject.toml
api/: serializers.py  urls.py  views.py
todo/: admin.py  forms.py  models.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todo_datecompleted.py
todo/templates/todo/: base.html  home.html
todowoo/: settings.py  urls.py
