[tool.poetry]
name = "todowoo-project"
version = "0.1.0"
description = ""
authors = ["Reuben-Stephen-John <reuben.sj2003@gmail.com>"]
readme = "README.md"
packages = [{include = "todowoo_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
